--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-webpack-project",
-  "version": "1.0.0",
+  "name": "faoutlets",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@chec/commerce.js": "^2.2.0",
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "webpack",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -45,20 +45,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.10",
-    "@webpack-cli/init": "^1.1.2",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "css-loader": "^4.3.0",
-    "html-webpack-plugin": "^4.5.0",
-    "style-loader": "^1.3.0",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^4.4.0",
-    "webpack-dev-server": "^3.11.0",
-    "workbox-webpack-plugin": "^5.1.4"
-  },
-  "description": "My webpack project"
+  }
 }
